Github Actions update for autobuild